
[package]
name = "vx-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.99"
arrow-arith = "56"
arrow-array = {version = "56", features = ["ffi"]}
arrow-buffer = "56"
arrow-cast = "56"
arrow-data = {version = "56", features = ["ffi"]}
arrow-ipc = "56"
arrow-ord = "56"
arrow-schema = "56"
arrow-select = "56"
arrow-string = "56"
datafusion = { version = "49", default-features = false }
datafusion-catalog = { version = "49" }
datafusion-common = { version = "49" }
datafusion-common-runtime = { version = "49" }
datafusion-datasource = { version = "49", default-features = false }
datafusion-execution = { version = "49" }
datafusion-expr = { version = "49" }
datafusion-physical-expr = { version = "49" }
datafusion-physical-plan = { version = "49" }
aws-config = "1.8.6"
aws-sdk-s3 = "1.106.0"
bytes = "1.10.1"
futures = "0.3.31"
futures-util = "0.3.31"
libc = "0.2.175"
object_store = { version = "0.12.3", features = ["cloud", "fs", "azure", "gcp", "aws"] }
tokio = { version = "1.47.1", features = ["full"]}
url = "2.5.7"
vortex = "0.53.0"
vortex-array = "0.53.0"
vortex-buffer = "0.53.0"
vortex-dtype = { version = "0.53.0", features = ["arrow"]}
vortex-error = { version = "0.53.0", features = ["object_store"] }
vortex-file = {version = "0.53.0", features = ["tokio", "object_store"]}
vortex-flatbuffers = "0.53.0"
vortex-io = { version = "0.53.0", features = ["tokio", "object_store"] }
vortex-layout = "0.53.0"
cxx = "1.0.184"
paste = "1.0.15"
take_mut = "0.2.2"

[build-dependencies]
cxx-build = "1.0"
