
[package]
name = "vx-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.99"
arrow-array = {version = "56", features = ["ffi"]}
arrow-data = {version = "56", features = ["ffi"]}
arrow-schema = "56"
futures = "0.3.31"
vortex = "0.53.0"
vortex-io = { version = "0.53.0", features = ["tokio"] }
cxx = "1.0.184"
paste = "1.0.15"
take_mut = "0.2.2"
async-compat = "0.2.5"

[build-dependencies]
cxx-build = "1.0.184"
